--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <li><a href="#">About Us</a></li>
             <li><a href="#">Jobs</a></li>
             <li><a href="#">Press</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="#">Blogs</a></li>
           </ul>
           <ul class="flex flex-col gap-4">
             <li><a href="#">Contact Us</a></li>
